QA-4929: fixed marge conflicts